--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -44,6 +44,9 @@ const { title } = Astro.props;
 	@keyframes fade-in {
 		from { opacity: 0; }
 	}
+	#text{
+		display: none;
+	}
 </style>
 
 <script>
