--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -44,9 +44,6 @@ const { title } = Astro.props;
 	@keyframes fade-in {
 		from { opacity: 0; }
 	}
-	#text{
-		display: none;
-	}
 </style>
 
 <script>
@@ -71,7 +68,7 @@ const { title } = Astro.props;
 					// utilizar la api de View Transition API
 					document.startViewTransition(() => {
 						// el scroll hacia arriba del todo
-						document.body.innerHTML = data
+						//document.body.innerHTML = data
 						document.documentElement.scrollTop = 0
 					})
 				}
