--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -63,12 +63,12 @@ const { title } = Astro.props;
 					const text = await response.text()
 					// quedarnos sólo con el contenido del html dentro de la etiqueta body
 					// usamos un regex para extraerlo
-					const [, data] = text.match(/<body>([\s\S]*)<\/body>/i)
+					const [, data] = text.match(/<body>([\s\S]*)<\/body>/)
 	
 					// utilizar la api de View Transition API
 					document.startViewTransition(() => {
 						// el scroll hacia arriba del todo
-						//document.body.innerHTML = data
+						document.body.innerHTML = data
 						document.documentElement.scrollTop = 0
 					})
 				}
