--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -40,10 +40,14 @@ const { title } = Astro.props;
 		font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
 			Bitstream Vera Sans Mono, Courier New, monospace;
 	}
-
+	text{
+		display: none;
+		color: white;
+	}
 	@keyframes fade-in {
 		from { opacity: 0; }
 	}
+
 </style>
 
 <script>
@@ -63,7 +67,7 @@ const { title } = Astro.props;
 					const text = await response.text()
 					// quedarnos sólo con el contenido del html dentro de la etiqueta body
 					// usamos un regex para extraerlo
-					const [, data] = text.match(/<body>([\s\S]*)<\/body>/)
+					const [, data] = text.match(/<body>([\s\S]*)<\/body>/i)
 	
 					// utilizar la api de View Transition API
 					document.startViewTransition(() => {
