trying solve bug

--- a/src/components/Title.astro
+++ b/src/components/Title.astro
@@ -5,3 +5,17 @@
   Libros que
   <span class="block text-[36px] md:text-[58px]">recomiendo</span>
 </h1>
+ <style>
+  h1{
+    {
+    position: absolute;
+    width: 100%;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background: #909090;
+    height:1600px
+}
+  }
+ </style>
