--- a/src/components/Title.astro
+++ b/src/components/Title.astro
@@ -1,5 +1,5 @@
 <h1
-  class="font-black uppercase text-6xl md:text-8xl text-center py-8 px-4"
+  class="font-black uppercase text-6xl md:text-8xl text-center py-8 px-4 bg-slate-100;"
   style="view-transition-name: book-title"
 >
   Libros que
@@ -13,7 +13,6 @@
     bottom: 0;
     left: 0;
     right: 0;
-    background: #909090;
     height:1600px
   }
  </style>
