--- a/src/pages/[book].astro
+++ b/src/pages/[book].astro
@@ -30,7 +30,7 @@ if (!info) {
       </h1>
       
     </header>
-    <div class="grid grid-cols-1 md:grid-cols-[350px_1fr] gap-x-12 mt-4 md:mt-20 px-8">
+    <div class="grid grid-cols-1 md:grid-cols-[370px_1fr] gap-x-12 mt-4 md:mt-20 px-8 relative">
 
       <div class="flex flex-col mb-10">
         <picture class="mb-8 w-full relative">
