--- a/src/components/Title.astro
+++ b/src/components/Title.astro
@@ -1,6 +1,6 @@
 <h1
-  class="font-black uppercase text-6xl md:text-8xl text-center py-8 px-4 bg-slate-100;"
-  style="view-transition-name: book-title"
+  class="font-black uppercase text-6xl md:text-8xl text-center py-8 px-4;"
+  style="view-transition-name: book-title bg-slate-100"
 >
   Libros que
   <span class="block text-[36px] md:text-[58px]">recomiendo</span>
