--- a/src/components/Title.astro
+++ b/src/components/Title.astro
@@ -1,6 +1,6 @@
 <h1
   class="font-black uppercase text-6xl md:text-8xl text-center py-8 px-4;"
-  style="view-transition-name: book-title bg-slate-100"
+  style="view-transition-name: book-title"
 >
   Libros que
   <span class="block text-[36px] md:text-[58px]">recomiendo</span>
@@ -13,6 +13,7 @@
     bottom: 0;
     left: 0;
     right: 0;
-    height:1600px
+    height:1600px;
+    background-color: rgb(241 245 249); 
   }
  </style>
