--- a/src/components/Title.astro
+++ b/src/components/Title.astro
@@ -1,5 +1,5 @@
 <h1
-  class="font-black uppercase text-6xl md:text-8xl text-center py-8 px-4;"
+  class="font-black uppercase text-6xl md:text-8xl text-center z-20 py-8 px-4;"
   style="view-transition-name: book-title"
 >
   Libros que
@@ -9,8 +9,8 @@
   h1{
     position: absolute;
     width: 100%;
-    top: -35px;
-    bottom: 0;
+    top: -10px;
+    bottom:0;
     left: 0;
     right: 0;
     height:1600px;
