--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -22,7 +22,7 @@ const { title } = Astro.props;
 		<div id="content">
 			<slot />
 		</div>
-		<footer class="p-7 text-center">
+		<footer class="p-7 text-center absolute bottom-1 z-20">
 			2023 &copy; Joaquin Marmol 
 		</footer>
 	</body>
@@ -35,6 +35,7 @@ const { title } = Astro.props;
 	html {
 		font-family: system-ui, sans-serif;
 		background-color: #F6F6F6;
+		z-index: 2;
 	}
 	code {
 		font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
