--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -22,7 +22,7 @@ const { title } = Astro.props;
 		<div id="content">
 			<slot />
 		</div>
-		<footer class="p-7 text-center absolute bottom-1 z-20">
+		<footer class="p-7 text-center absolute bottom--40 z-20 left-0 right-0">
 			2023 &copy; Joaquin Marmol 
 		</footer>
 	</body>
