--- a/src/pages/[book].astro
+++ b/src/pages/[book].astro
@@ -32,7 +32,7 @@ if (!info) {
     </header>
     <div class="grid grid-cols-1 md:grid-cols-[370px_1fr] gap-x-12 mt-4 md:mt-20 px-8 relative z-20">
 
-      <div class="flex flex-col mb-10">
+      <div class="flex flex-col mb-10 relative z-20">
         <picture class="mb-8 w-full relative">
           <img
             class="aspect-[389/500] h-full object-cover w-full max-w-full rounded"
