--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,7 +5,7 @@ import ListOfBooks from '../components/ListOfBooks.astro';
 ---
 
 <Layout title="Libros de Programación recomendados por @midudev">
-	<main class="m-auto max-w-4xl mt-48 relative z-20">
+	<main class="m-auto max-w-4xl relative z-20">
 		<Title />
 
 		<ListOfBooks />
